--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "fake-api":"json-server --watch src/data/products.json ---port 3001"
   },
   "eslintConfig": {
     "extends": [
